--- a/flutter_application_1/android/app/build.gradle
+++ b/flutter_application_1/android/app/build.gradle
@@ -22,6 +22,8 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     namespace "com.example.flutter_application_1"
     compileSdk flutter.compileSdkVersion
@@ -63,5 +65,11 @@ android {
 flutter {
     source '../..'
 }
-
-dependencies {}
+plugins{
+    id("com.android.application")
+    id("com.google.gms.google-services")
+}
+dependencies {
+    implementation(platform("com.google.firebase:firebase-bom:32.7.4"))
+    implementation("com.google.firebase:firebase-analytics")
+}
