--- a/flutter_application_1/android/build.gradle
+++ b/flutter_application_1/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript{
+    ext.kotlin_version = '1.3.50'
+    repositories{
+        google()
+        jcenter()
+    }
+    dependencies{
+        classpath 'com.google.gms:google-services:4.3.2'
+    }
+}
 allprojects {
     repositories {
         google()
